syntax = "proto3";

package post;

option go_package = "github.com/ShutSasha/devhub/packages/server/PostService;post";

service PostService{
  rpc AddCommentToPost (AddCommentRequest) returns (AddCommentToPostResponse);
}

message  AddCommentRequest{
  string postId = 1;
  string commentId = 2;
}

message AddCommentToPostResponse{
  bool success = 1;
  string message = 2;
}