syntax = "proto3";

option go_package = "github.com/ShutSasha/devhub/packages/server/PostService;user";

service UserService{
  rpc AddPostToUser (AddPostRequest) returns (UserResponse);
  rpc DeletePostFromUser (DeletePostRequest) returns (UserResponse);
  rpc RestoreUserPost (RestorePostRequest) returns (UserResponse);
  rpc AddPostReactionToUser(AddReactionRequest) returns (UserResponse);
  rpc DeletePostReactionFromUser(DeleteReactionRequest) returns (UserResponse);
}

message  AddPostRequest{
  string userId = 1;
  string postId = 2;
}

message DeletePostRequest{
  string postId = 1;
}

message RestorePostRequest{
  string userId = 1;
  string postId = 2;
}

message AddReactionRequest{
  string userId = 1;
  string postId = 2;
  string type = 3;
}

message DeleteReactionRequest{
  string userId = 1;
  string postId = 2;
  string type = 3;
}

message UserResponse{
  bool success = 1;
  string message = 2;
}
